[tool.poetry]
name = "pyvaru"
version = "0.3.1"
description = "Rule based data validation library for python."
authors = ["Davide Zanotti <davidezanotti@gmail.com>"]
repository = "https://github.com/Rydra/pyvaru"

[tool.poetry.dependencies]
python = "^3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
